feat(footer): social-iconを1つのフォルダに格納する

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,7 +1,7 @@
 ---
 import Copyright from './copyright.astro';
 import RssIcon from './rss-icon.astro';
-import SocialIcon from './social-icon.astro';
+import SocialIcon from './social-icon/social-icon.astro';
 ---
 
 <footer class="bg-black">
