--- a/src/components/social-icon/social-icon.astro
+++ b/src/components/social-icon/social-icon.astro
@@ -1,5 +1,5 @@
 ---
-import { type SocialIcon, socialIcons, socials } from '../assets/social-icons';
+import { type SocialIcon, socialIcons, socials } from './social-icons';
 
 interface Props {
 	icon: SocialIcon;
