--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,18 @@
 ---
-import Document from '../layouts/document.astro';
+import BlogCard from "../components/blog-card.astro";
+import Document from "../layouts/document.astro";
+
+import { sortedBlogEntries } from "../api/posts";
 ---
 
 <Document>
-  <p>ここにコンテンツが入ります</p>
+  <section class="grid gap-8">
+    <div class="grid grid-cols-2 items-center">
+      <h2 class="text-3xl font-bold text-foreground tracking-wider">BLOG</h2>
+      <p class="justify-self-end">次へ</p>
+    </div>
+    <div class="grid gap-y-8 sm:gap-y-4">
+      {sortedBlogEntries.map((blog) => <BlogCard blog={blog} />)}
+    </div>
+  </section>
 </Document>
