--- a/src/components/blog-card.astro
+++ b/src/components/blog-card.astro
@@ -25,7 +25,7 @@ const { blog } = Astro.props;
   <section class="grid gap-y-1">
     <h3>
       <Link
-        className="leading-relaxed line-clamp-3 text-md sm:text-lg font-semibold text-foreground"
+        className="leading-relaxed line-clamp-3 text-md sm:text-lg font-medium text-foreground"
         to={blog.slug}
       >
         {blog.data.title}
