feat(blog): ブログ一覧への動線を追加
サイトリンクは画面遷移がしやすいように。テーマ変更はViewTransition API の都合でページ遷移するとボタンが消えてしまうので修正

refs: https://zenn.dev/chot/articles/48a58019f246bd#%E3%83%9A%E3%83%BC%E3%82%B8%E9%81%B7%E7%A7%BB%E5%BE%8C%E3%81%AB-addeventlistner-%E3%81%8C%E6%B6%88%E3%81%88%E3%82%8B%E4%BA%8B%E8%B1%A1%E3%81%B8%E3%81%AE%E5%AF%BE%E5%BF%9C

--- a/src/components/theme-selector.astro
+++ b/src/components/theme-selector.astro
@@ -3,6 +3,7 @@
     id="toggle-theme"
     class="group hover:opacity-70"
     aria-label="Toggle Theme"
+    transition:persist
   >
     <span
       class="absolute left-0 right-0 top-0 opacity-0 group-aria-pressed:opacity-100 text-primary"
