--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,24 @@
 ---
 import BlogCard from "../components/blog-card.astro";
+import Link from "../components/link.astro";
 import Document from "../layouts/document.astro";
+import { getBlogs } from "../utils/blog";
 
-import { sortedBlogEntries } from "../api/posts";
+const allBlogs = await getBlogs();
+const blogs = allBlogs.slice(0, 5);
 ---
 
 <Document>
-  <section class="grid gap-8">
-    <div class="grid grid-cols-2 items-center">
-      <h2 class="text-3xl font-bold text-foreground tracking-wider">BLOG</h2>
-      <p class="justify-self-end">次へ</p>
-    </div>
-    <div class="grid gap-y-8 sm:gap-y-4">
-      {sortedBlogEntries.map((blog) => <BlogCard blog={blog} />)}
+  <section class="grid grid-cols-2 gap-8">
+    <h2 class="text-3xl font-bold text-foreground tracking-wider">BLOG</h2>
+    <Link
+      to="/blog/1"
+      className="justify-self-end rounded-full border-border border px-4 py-2 text-sm sm:text-base bg-background text-foreground"
+    >
+      ほかの記事も見る
+    </Link>
+    <div class="col-span-2 grid gap-y-8 sm:gap-y-4">
+      {blogs.map((blog) => <BlogCard blog={blog} />)}
     </div>
   </section>
 </Document>
