--- a/src/components/mini-post.astro
+++ b/src/components/mini-post.astro
@@ -20,7 +20,11 @@ const { Content } = await entry.render();
     class="pointer-events-none origin-top-left select-none"
     style="transform: scale(0.179, 0.179);"
   >
-    <Post title={blog.data.title} type="mini">
+    <Post
+      title={blog.data.title}
+      publishDate={blog.data.publishDate}
+      type="mini"
+    >
       <Content />
     </Post>
   </div>
