--- a/src/stylesheet/markdown.css
+++ b/src/stylesheet/markdown.css
@@ -1,5 +1,5 @@
 .prose {
-    @apply sm:!max-w-full;
+    @apply !max-w-full;
 }
 
 .prose h1,
@@ -29,7 +29,7 @@
 }
 
 .prose h2 {
-    @apply text-base sm:text-2xl sm:mt-20;
+    @apply text-base sm:text-2xl sm:mt-16;
 }
 
 .prose h3 {
