--- a/src/layouts/document.astro
+++ b/src/layouts/document.astro
@@ -19,7 +19,7 @@ import ThemeProvider from "../components/theme-provider.astro";
   <body class="min-h-screen grid grid-rows-[auto_1fr_auto]">
     <Header />
     <main>
-      <div class="max-w-screen-md mx-auto px-4 py-8 mb-12">
+      <div class="h-full max-w-screen-md mx-auto p-4">
         <slot />
       </div>
     </main>
