feat: 戻るボタンを実装

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const blogs = allBlogs.slice(0, 5);
   >
     <h2 class="text-3xl font-bold text-foreground tracking-wider">BLOG</h2>
     <Link
-      to="/blog/1"
+      to="/blog"
       className="justify-self-end rounded-full border-border border px-4 py-2 text-sm sm:text-base bg-background text-foreground"
     >
       ほかの記事も見る
