chore: 検索対象を絞り込み

--- a/src/layouts/about.astro
+++ b/src/layouts/about.astro
@@ -10,7 +10,7 @@ import "../stylesheet/markdown.css";
       <BackButton />
     </div>
     <h1 class="text-3xl font-bold text-foreground tracking-wider">ABOUT</h1>
-    <article class="prose">
+    <article class="prose" data-pagefind-body>
       <slot />
     </article>
   </section>
