--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -18,9 +18,8 @@ const { page } = Astro.props as {
 
 <Document>
   <section class="grid gap-8">
-    <h2 class="text-3xl font-bold text-foreground tracking-wider">BLOG</h2>
-    <div class="grid items-center">
-      <div class="justify-self-end">
+    <div class="grid items-center sticky top-0 backdrop-blur-sm z-20 py-4">
+      <div class="justify-self-end rounded-full">
         <Pagination page={page} collectionKey="blog" />
       </div>
     </div>
