feat: page-findの検索結果にタイトルが適切に入るようにする

--- a/src/layouts/about.astro
+++ b/src/layouts/about.astro
@@ -9,7 +9,12 @@ import "../stylesheet/markdown.css";
     <div class="mb-8">
       <BackButton />
     </div>
-    <h1 class="text-3xl font-bold text-foreground tracking-wider">ABOUT</h1>
+    <h1
+      class="text-3xl font-bold text-foreground tracking-wider"
+      data-pagefind-meta="title"
+    >
+      ABOUT
+    </h1>
     <article class="prose" data-pagefind-body>
       <slot />
     </article>
