--- a/src/components/blog-card.astro
+++ b/src/components/blog-card.astro
@@ -12,30 +12,22 @@ type Props = {
 const { blog } = Astro.props;
 ---
 
-<article
-  class="grid gap-y-3 gap-x-6 grid-flow-row sm:grid-flow-col sm:grid-cols-[1fr_4fr] items-center"
->
-  <div
-    class="relative rounded-xl bg-muted hover:opacity-70 cursor-pointer py-6 sm:py-3"
-  >
-    <MiniPost blog={blog} />
-    <Link to={buildUrl(blog.slug)} className="absolute inset-0">
-      <span class="sr-only">{blog.data.title}</span>
-    </Link>
-  </div>
-  <section class="grid gap-y-1">
+<article>
+  <section class="grid gap-y-4">
     <h3>
       <Link
-        className="leading-relaxed break-all line-clamp-3 text-md sm:text-lg font-medium text-foreground"
+        className="leading-relaxed break-all line-clamp-3 text-lg sm:text-xl font-semibold text-foreground hover:underline hover:decoration-primary hover:underline-offset-4"
         to={buildUrl(blog.slug)}
       >
         {blog.data.title}
       </Link>
     </h3>
-    <div
-      class={"flex items-center gap-1 text-muted-foreground text-xs sm:text-sm"}
+
+    <Link
+      className="leading-relaxed text-sm font-semibold text-foreground/70 hover:underline hover:decoration-primary hover:underline-offset-4"
+      to={buildUrl(blog.slug)}
     >
-      公開日: <Time date={blog.data.publishDate} />
-    </div>
+      記事を読む
+    </Link>
   </section>
 </article>
