--- a/src/layouts/document.astro
+++ b/src/layouts/document.astro
@@ -1,5 +1,5 @@
 ---
-import "@fontsource-variable/lexend";
+import "@fontsource-variable/noto-sans-jp";
 import "../stylesheet/globalStyles.css";
 import { ViewTransitions } from "astro:transitions";
 import ogImage from "../assets/ogp.png";
@@ -48,7 +48,7 @@ const ogp = new URL(ogImage.src, Astro.site?.origin as string);
   <body class="min-h-screen grid grid-rows-[auto_1fr_auto]">
     <Header />
     <main>
-      <div class="h-full max-w-screen-md mx-auto p-4">
+      <div class="h-full max-w-screen-md mx-auto p-4 mb-8">
         <slot />
       </div>
     </main>
