--- a/src/components/author.astro
+++ b/src/components/author.astro
@@ -1,27 +1,23 @@
 ---
 import { Image } from "astro:assets";
-import { Icon } from "astro-icon/components";
 import authorImage from "../assets/ikuma.svg";
 import Link from "./link.astro";
 ---
 
 <div
-  class="grid grid-cols-[auto_1fr_max-content] items-center grid-rows-2 gap-x-3 sm:gap-x-6 mx-auto border-t border-border/40 px-1 sm:px-20 py-4"
+  class="grid grid-cols-[auto_1fr_max-content] items-center grid-rows-2 gap-x-3 sm:gap-x-6 mx-auto border-t border-border/40 pt-8"
 >
   <Image
     src={authorImage}
     alt="ikuma-t"
     class="row-span-2 col-span-1 justify-self-end w-10 sm:w-12 aspect-square"
   />
-  <p class="font-semibold text-base sm:text-lg">ikuma-t</p>
+  <p class="font-semibold text-xl">ikuma-t</p>
   <Link
-    to="/about"
-    className="w-fit text-foreground bg-background text-xs sm:text-sm flex gap-2 items-center row-span-2 border border-border rounded-full px-2 py-1 sm:px-4 sm:py-2"
+    to="https://bento.me/ikuma"
+    className="w-fit text-foreground bg-background text-base flex gap-2 items-center row-span-2 border border-border rounded-full px-4 py-2 sm:px-4 sm:py-2"
   >
-    <span>ABOUT</span>
-    <Icon name="lucide:circle-user-round" />
+    <span>about</span>
   </Link>
-  <p class="text-muted-foreground text-xs sm:text-sm">
-    9割笑顔、1割 (´・ω・) なエンジニア
-  </p>
+  <p class="text-muted-foreground text-base">9割笑顔、1割 (´・ω・)</p>
 </div>
