--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,8 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
 import Author from "../../components/author.astro";
-import BackButton from "../../components/back-button.astro";
-import TocButton from "../../components/toc-button.astro";
 import Document from "../../layouts/document.astro";
 import Post from "../../layouts/post.astro";
 import { getBlogs } from "../../utils/blog";
@@ -16,7 +14,7 @@ export async function getStaticPaths() {
 }
 
 const { entry } = Astro.props;
-const { Content, headings } = await entry.render();
+const { Content } = await entry.render();
 ---
 
 <Document title={entry.data.title}>
