--- a/src/pages/search/index.astro
+++ b/src/pages/search/index.astro
@@ -6,7 +6,7 @@ import Document from "../../layouts/document.astro";
 <Document>
   <section class="grid grid-rows-[max-content_1fr_max-content] h-full gap-4">
     <hgroup class="space-y-2">
-      <h2 class="text-3xl font-bold text-foreground tracking-wider">SEARCH</h2>
+      <h2 class="text-3xl font-bold text-foreground tracking-wider">search</h2>
       <p class="text-muted-foreground text-sm">
         サイト内のすべての記事を検索できます。
       </p>
