--- a/src/stylesheet/markdown.css
+++ b/src/stylesheet/markdown.css
@@ -49,8 +49,7 @@
 .prose ul,
 .prose table,
 .prose th,
-.prose td,
-.prose code {
+.prose td{
   @apply !text-foreground text-base !leading-7 sm:!leading-8 tracking-wide;
 }
 
