--- a/src/components/theme-selector.astro
+++ b/src/components/theme-selector.astro
@@ -6,7 +6,7 @@
     transition:persist
   >
     <span
-      class="absolute left-0 right-0 top-0 opacity-0 group-aria-pressed:opacity-100 text-primary"
+      class="absolute left-0 right-0 top-0 opacity-0 group-aria-pressed:opacity-100 text-yellow-400"
     >
       <svg
         width="24"
@@ -27,7 +27,7 @@
     </span>
 
     <span
-      class="absolute left-0 right-0 top-0 opacity-0 group-aria-[pressed=false]:opacity-100 text-blue-900"
+      class="absolute left-0 right-0 top-0 opacity-0 group-aria-[pressed=false]:opacity-100 text-primary"
     >
       <svg
         width="24"
