--- a/src/layouts/document.astro
+++ b/src/layouts/document.astro
@@ -45,7 +45,7 @@ const ogp = new URL(ogImage.src, Astro.site?.origin as string);
     <ViewTransitions />
     <ThemeProvider />
   </head>
-  <body class="min-h-screen grid grid-rows-[auto_1fr_auto]">
+  <body class="min-h-screen grid grid-rows-[auto_1fr_auto] bg-background">
     <Header />
     <main>
       <div class="h-full max-w-screen-md mx-auto p-4 mb-8">
