--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const blogs = allBlogs.slice(0, 20);
         ほかの記事も見る
       </Link>
     </div>
-    <div class="grid place-self-start gap-y-8 sm:gap-y-16">
+    <div class="grid place-self-start gap-y-16">
       {blogs.map((blog) => <BlogCard blog={blog} />)}
     </div>
     <div class="mt-12">
