--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -27,7 +27,7 @@ const { page } = Astro.props as {
         <Pagination page={page} collectionKey="blog" />
       </div>
     </div>
-    <div class="grid gap-y-8 sm:gap-y-16">
+    <div class="grid gap-y-16">
       {page.data.map((blog) => <BlogCard blog={blog} />)}
     </div>
     <div class="mt-8">
