--- a/src/components/author.astro
+++ b/src/components/author.astro
@@ -19,5 +19,5 @@ import Link from "./link.astro";
   >
     <span>about</span>
   </Link>
-  <p class="text-muted-foreground text-base">9割笑顔、1割 (´・ω・)</p>
+  <p class="text-foreground/80 text-base">9割笑顔、1割 (´・ω・)</p>
 </div>
