--- a/src/components/blog-card.astro
+++ b/src/components/blog-card.astro
@@ -2,6 +2,7 @@
 import type { CollectionEntry } from "astro:content";
 import { buildUrl } from "../utils/blog";
 import Link from "./link.astro";
+import Time from "./time.astro";
 
 type Props = {
   blog: CollectionEntry<"blog">;
@@ -12,6 +13,7 @@ const { blog } = Astro.props as Props;
 
 <article>
   <section class="grid gap-y-4">
+    <Time date={blog.data.publishDate} />
     <h3>
       <Link
         className="leading-relaxed break-all line-clamp-3 text-lg sm:text-xl font-bold text-foreground hover:underline hover:decoration-primary hover:underline-offset-4"
