fix: スクロールバーを取得してしまうため修正

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const blogs = allBlogs.slice(0, 20);
 <Document>
   <section class="grid gap-8 grid-rows-[max_content-1fr_max-content]">
     <div
-      class="mx-[calc(50%-50vw)] sticky top-0 backdrop-blur-[6px] hover:backdrop-blur-md z-20 py-4"
+      class="mx-[calc(50%-50cqi)] sticky top-0 backdrop-blur-[6px] hover:backdrop-blur-md z-20 py-4"
     >
       <div
         class="flex justify-between items-center max-w-screen-md mx-auto px-4"
