--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -8,9 +8,15 @@ import ThemeSelector from "./theme-selector.astro";
 <header>
   <div class="max-w-screen-md mx-auto my-12 px-4">
     <div
-      class="grid grid-cols-[1fr_auto_auto] gap-4 justify-between items-center"
+      class="grid grid-cols-[1fr_auto_auto_auto_auto] gap-4 justify-between items-center"
     >
       <SiteLogo />
+      <Link to="/blog">
+        <Icon size={24} title="登壇" name="lucide:file-text" />
+      </Link>
+      <Link to="/talk">
+        <Icon size={24} title="登壇" name="lucide:presentation" />
+      </Link>
       <Link to="/search">
         <Icon size={28} title="検索" name="lucide:text-search" />
       </Link>
