--- a/src/layouts/document.astro
+++ b/src/layouts/document.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource-variable/noto-sans-jp";
 import "../stylesheet/globalStyles.css";
+import "../styles/global.css";
 import { ClientRouter } from "astro:transitions";
 import ogImage from "../assets/ogp.png";
 import Footer from "../components/footer.astro";
