--- a/src/features/blog/blog-card.astro
+++ b/src/features/blog/blog-card.astro
@@ -1,8 +1,8 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import { buildUrl } from "../utils/blog";
-import Link from "./link.astro";
-import Time from "./time.astro";
+import Link from "../../components/link.astro";
+import Time from "../../components/time.astro";
+import { buildUrl } from "./blog";
 
 type Props = {
   blog: CollectionEntry<"blog">;
