--- a/src/features/talk/talk-card.astro
+++ b/src/features/talk/talk-card.astro
@@ -1,8 +1,8 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import Image from "astro/components/Image.astro";
-import { buildUrl, getTalkId } from "../utils/talks";
-import Time from "./time.astro";
+import Time from "../../components/time.astro";
+import { buildUrl, getTalkId } from "./talks";
 
 type Props = {
   talk: CollectionEntry<"talks">;
