--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -1,12 +1,12 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import type { GetStaticPathsOptions, Page } from "astro";
-import BlogCard from "../../components/blog-card.astro";
 import Pagination from "../../components/pagination/pagination.astro";
+import BlogCard from "../../features/blog/blog-card.astro";
 
 import Author from "../../components/author.astro";
+import { getBlogs } from "../../features/blog/blog";
 import Document from "../../layouts/document.astro";
-import { getBlogs } from "../../utils/blog";
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
   return paginate(await getBlogs(), { pageSize: 50 });
