--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -2,9 +2,9 @@
 import { render } from "astro:content";
 import { Icon } from "astro-icon/components";
 import Author from "../../components/author.astro";
+import { getBlogs } from "../../features/blog/blog";
+import Blog from "../../features/blog/blog.astro";
 import Document from "../../layouts/document.astro";
-import Post from "../../layouts/post.astro";
-import { getBlogs } from "../../utils/blog";
 
 export async function getStaticPaths() {
   const blogEntries = await getBlogs();
@@ -19,7 +19,7 @@ const { Content } = await render(entry);
 ---
 
 <Document title={entry.data.title}>
-  <Post title={entry.data.title} publishDate={entry.data.publishDate}>
+  <Blog title={entry.data.title} publishDate={entry.data.publishDate}>
     {
       entry.data.draft && (
         <div class="mb-8 flex items-center gap-2 border border-border rounded-md p-4 text-foreground bg-background font-semibold">
@@ -29,7 +29,7 @@ const { Content } = await render(entry);
       )
     }
     <Content />
-  </Post>
+  </Blog>
   <div class="mt-16">
     <Author />
   </div>
