--- a/src/pages/talk/[id].astro
+++ b/src/pages/talk/[id].astro
@@ -2,9 +2,13 @@
 import { render } from "astro:content";
 import { createMarkdownProcessor } from "@astrojs/markdown-remark";
 import Author from "../../components/author.astro";
+import Talk from "../../features/talk/talk.astro";
+import {
+  getTalkEmbedUrl,
+  getTalkId,
+  getTalks,
+} from "../../features/talk/talks";
 import Document from "../../layouts/document.astro";
-import Post from "../../layouts/post.astro";
-import { getTalkEmbedUrl, getTalkId, getTalks } from "../../utils/talks";
 
 export async function getStaticPaths() {
   const talksEntries = await getTalks();
@@ -29,10 +33,10 @@ const { Content } = await render({
 ---
 
 <Document title={`${entry.data.title!}`}>
-  <Post title={entry.data.title!} publishDate={entry.data.pubdate}>
+  <Talk title={entry.data.title!} publishDate={entry.data.pubdate!}>
     <Fragment set:html={iframe} />
     <Content />
-  </Post>
+  </Talk>
   <div class="mt-16">
     <Author />
   </div>
