--- a/src/stylesheet/globalStyles.css
+++ b/src/stylesheet/globalStyles.css
@@ -2,6 +2,29 @@ body {
   container-type: inline-size;
 }
 
+body::before {
+  --size: 45px;
+  --line: color-mix(in hsl, canvasText, transparent 93%);
+  content: "";
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background: linear-gradient(
+        90deg,
+        var(--line) 1px,
+        transparent 1px var(--size)
+      )
+      50% 50% / var(--size) var(--size),
+    linear-gradient(var(--line) 1px, transparent 1px var(--size)) 50% 50% /
+      var(--size) var(--size);
+  mask: linear-gradient(-20deg, transparent 50%, white);
+  top: 0;
+  transform-style: flat;
+  pointer-events: none;
+  z-index: 1;
+}
+
+
 :root {
     color-scheme: light dark;
     --background: 0 0% 100%;
