--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -19,13 +19,15 @@ const { page } = Astro.props as {
 
 <Document>
   <section class="grid gap-8">
-    <div
-      class="mx-[calc(50%-50cqi)] sticky top-0 backdrop-blur-[6px] hover:backdrop-blur-md z-20 py-4"
-    >
+    <div class="mx-[calc(50%-50cqi)] sticky top-0 py-4">
       <div
         class="flex justify-between items-center max-w-screen-md mx-auto px-4"
       >
-        <h2 class="text-3xl font-bold text-foreground tracking-wider">blog</h2>
+        <h2
+          class="text-3xl font-bold text-foreground tracking-wider bg-background/80"
+        >
+          blog
+        </h2>
         <div class="justify-self-end rounded-full">
           <Pagination page={page} collectionKey="blog" />
         </div>
