--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,19 +11,15 @@ const blogs = allBlogs.slice(0, 20);
 
 <Document>
   <section class="grid gap-8 grid-rows-[max_content-1fr_max-content]">
-    <div
-      class="mx-[calc(50%-50cqi)] sticky top-0 backdrop-blur-[6px] hover:backdrop-blur-md z-20 py-4"
-    >
+    <div class="mx-[calc(50%-50cqi)] sticky top-0 py-4">
       <div
         class="flex justify-between items-center max-w-screen-md mx-auto px-4"
       >
-        <h2 class="text-3xl font-bold text-foreground tracking-wider">blog</h2>
-        <Link
-          to="/blog"
-          className="justify-self-end rounded-full border-border border px-4 py-2 text-sm sm:text-base bg-background text-foreground"
+        <h2
+          class="text-3xl font-bold text-foreground tracking-wider bg-background/80"
         >
-          ほかの記事も見る
-        </Link>
+          blog
+        </h2>
       </div>
     </div>
     <div class="grid place-self-start gap-y-16">
