--- a/src/pages/talk/index.astro
+++ b/src/pages/talk/index.astro
@@ -16,7 +16,7 @@ const talksByYear = await groupByTalkYear(talks);
     {
       talksByYear.entries().map(([year, talks]) => (
         <section class="grid gap-y-4">
-          <div class="mx-[calc(50%-50cqi)] sticky top-0 py-4 z-20 backdrop-blur-md gradient-mask-b-80">
+          <div class="mx-[calc(50%-50cqi)] py-4 z-20">
             <h3 class="text-2xl font-bold text-foreground tracking-wider max-w-screen-md mx-auto px-4">
               {year}
             </h3>
