--- a/src/pages/admin/protected.astro
+++ b/src/pages/admin/protected.astro
@@ -2,7 +2,7 @@
 export const prerender = false;
 
 import { getSession } from "auth-astro/server";
-import Document from "../../layouts/document.astro";
+import Admin from "../../layouts/admin.astro";
 
 const session = await getSession(Astro.request);
 if (!session) return Astro.redirect("/");
@@ -20,7 +20,7 @@ const data = await response.json();
 console.log(data);
 ---
 
-<Document>
+<Admin title="保護されたページ">
   <h1>Astro</h1>
   <p>Only signed in users can see this page.</p>
-</Document>
+</Admin>
