--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -11,7 +11,7 @@ import ThemeSelector from "./theme-selector.astro";
     <SiteLogo />
     <div class="flex items-center gap-4">
       <Link to="/blog" className="font-montserrat font-bold">BLOG</Link>
-      <Link to="/talk" className="font-montserrat font-bold">TALK</Link>
+      <!-- <Link to="/talk" className="font-montserrat font-bold">TALK</Link> -->
       <ThemeSelector />
     </div>
   </nav>
